--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "engines": {
         "node": ">=10.15.0",
         "npm": ">=6.4.1",
-        "yarn": ">=1.17.3"
+        "npm": ">=1.17.3"
     },
     "scripts": {
         "start": "gulp serve",
-        "start:debug": "cross-env DEBUG=amida-api-boilerplate:* yarn start",
+        "start:debug": "cross-env DEBUG=amida-api-boilerplate:* npm start",
         "build": "gulp",
         "copy": "gulp copy",
         "babel": "gulp babel",
         "lint": "esw *.js server config --color",
-        "lint:watch": "yarn lint -- --watch",
+        "lint:watch": "npm lint -- --watch",
         "fix-js": "eslint-auto-fix \"src/**/.js\" \"config/**/.js\" \"config/*.js\"",
         "beautify": "es-beautifier -u -c .eslintrc.js *.js server config",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _jest -- --ui bdd --reporter spec --colors --compilers js:babel-core/register server/tests --recursive",
-        "test:check-coverage": "yarn test:coverage && istanbul check-coverage",
+        "test:check-coverage": "npm test:coverage && istanbul check-coverage",
         "report-coverage": "coveralls < ./coverage/lcov.info"
     },
     "keywords": [
